--- a/web-editor/frontend/index.html
+++ b/web-editor/frontend/index.html
@@ -9,6 +9,9 @@
   </head>
   <body class="m-0">
     <div id="root" class="h-screen"></div>
+    <script>
+      if (!crossOriginIsolated) SharedArrayBuffer = ArrayBuffer;
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
